# sysopy

./: .gitignore  README.md  temp
zad1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mylib.c  mylib.h
zad2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  main_oldcomment.c  temp  temporary  zad2
zad3/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.c  main_dynamic.c  mylib.c  report3b3.txt  report3bs.txt  search_directory  temp  zad2  zad2dynamic  zad2shared  zad2static
zad3/Testing/Temporary/: CTestCostData.txt
zestaw1/: raport2.txt  raport3a.txt  raport3b.txt
zestaw1/zad1/: CMakeLists.txt  mylib.c  mylib.h
zestaw1/zad2/: CMakeLists.txt  main.c  mylib.h
zestaw1/zad3/: CMakeLists.txt  main.c  main_dynamic.c
zestaw10/DATAGRAMS/: client.c  common.h  server.c  xd  xdd
zestaw10/STREAM/: CMakeLists.txt  client.c  common.h  server.c
zestaw2/zad1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  copylib  copysys  dane  file_lib.c  file_lib.h  file_sys.c  file_sys.h  main  main.c  temp  wyniki.txt
zestaw2/zad2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lib.c  lib.h  main  main.c
zestaw3/zad1/: CMakeLists.txt  Makefile  main.c  program  zadanie1.c
zestaw3/zad2/: CMakeLists.txt  Makefile  lista  main.c  program  temp  tester.c  zadanie2  zadanie2.c
zestaw3/zad2/archiwum/: trzy_2019-03-22_19-49-30
zestaw3/zad2/tests/: dwa
zestaw3/zad3/: Makefile  lista  main.c  program  test.c  tester  zadanie3.c
zestaw3/zad3/archiwum/: jeden_2019-03-23_12-17-09  jeden_2019-03-23_12-17-14  jeden_2019-03-23_12-17-48
zestaw4/zad1/: CMakeLists.txt  main.c  main_des.c  script
zestaw4/zad2/: main.c  test.c
zestaw4/zad3a/: catcher.c  sender.c
zestaw4/zad3b/: CMakeLists.txt  catcher.c  sender.c
zestaw5/zad1/: CMakeLists.txt  lista  main.c
zestaw5/zad2/: CMakeLists.txt  master.c  slave.c
zestaw6/POSIX/: CMakeLists.txt  Makefile  chat.c  chat.h  client.c  cmd  cmd1  server.c
zestaw6/SystemV/: CMakeLists.txt  Makefile  chat.c  chat.h  client.c  cmd  cmd1  cmd2  server.c
zestaw7/POSIX/: CMakeLists.txt  belt.c  belt.h  loader.c  trucker.c  workergen.c
zestaw7/SystemV/: CMakeLists.txt  belt.c  belt.h  loader.c  trucker.c  workergen.c
zestaw8/zad1/: CMakeLists.txt  barbara.ascii.pgm  filter  filter2  main.c
zestaw9/zad1/: CMakeLists.txt  main.c
